<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dest_dashboard">

    <fragment
        android:id="@+id/dest_dashboard"
        android:name="com.deepseek.dshshell.ui.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/dest_preview"
        android:name="com.deepseek.dshshell.ui.PreviewFragment"
        android:label="@string/nav_preview" />

    <fragment
        android:id="@+id/dest_files"
        android:name="com.deepseek.dshshell.ui.FilesFragment"
        android:label="@string/nav_files" />

    <fragment
        android:id="@+id/dest_settings"
        android:name="com.deepseek.dshshell.ui.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
